--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 	<meta charset="UTF-8">
 	<title>Document</title>
 	<link rel="stylesheet" href="photo.css">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	
 <style>
    ul.hr {
