--- a/index.html
+++ b/index.html
@@ -26,13 +26,13 @@
 			<ul class="hr">
                            <li><a href="#">Главная</a></li>
                            <li><a href="#">Уроки</a></li>
-                           <li>Категория
+                           <li><a href="#">Категория</a>
                            	<ul>
-                           		<li>HTML</li>
-                                <li>CSS</li>
-                                <li>JavaScript</li>
-                                <li>AJAX</li>
-                                <li>Photoshop</li>
+                           		<li><a href="#">HTML</a></li>
+                                <li><a href="#">CSS</a></li>
+                                <li><a href="#">JavaScript</a></li>
+                                <li><a href="#">AJAX</a></li>
+                                <li><a href="#">Photoshop</a></li>
                            	</ul>
                            </li>
                            <li><a href="#">О нас</a></li>
